# fast_api

./: .dev.env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
app/: alembic.ini
app/application/api/: main.py
app/core/consts/: roles.py  token_types.py
app/core/settings/: dev.py
app/di/dev/: containers.py
app/domain/entities/: action.py  base.py  entities.py  message.py  role.py  text.py  token.py  user.py
app/domain/events/: base.py  roles.py  text.py  user.py
app/domain/exeptions/: base.py  message.py  role.py  tag.py  text.py  user.py
app/domain/ports/: healthchek.py
app/domain/repositories/: base.py  text.py  token.py  user.py
app/domain/services/: action.py  auth.py  healthchek.py  text.py  token.py  user.py
app/domain/use_cases/: base.py
app/domain/values/: base.py  tag.py  text.py  token.py  user.py
app/dto/: action.py  from_db.py  message.py  mixins.py  role.py  text.py  user.py
app/dto/role/: creae_role.py  role_from_db.py  role_response.py
app/dto/text/: create_text.py  text.py  text_from_db.py  text_response.py
app/dto/token/: token.py  token_response.py
app/dto/user/: create_user.py  user.py  user_from_db.py  user_response.py
app/infra/pg/: database.py
app/logic/services/: healthcheck.py
app/settings/: base.py  dev.py
app/settings/config/: __init__.py  auth.py  database.py
app/utils/: aio.py  auth.py  crypto.py
app/utils/consts/: roles.py
app/utils/roles/: roles.py
app/utils/roles_names/: roles.py
docker_compose/: app.yaml  storages.yaml
docker_compose/master-init/: pg_hba.conf
(+84 files in other folders)
