[project]
name = "test-fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "fedor",email = "fedorlastv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
